Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31092

mysqldump --force doesn't ignore error as it should

    XMLWordPrintable

Details

    Description

      Customer has few legacy functions.

      One of the function has some syntax error.
      But more importantly customer is unable to take a dump of the function even with --force.

      mysqldump --no-data --routines --events --triggers --force --databases xxxx> dump.sql
      mysqldump: Couldn't execute 'SHOW CREATE FUNCTION `FF1`': Undeclared variable: DBPAY_DRAWING_AMT (1327)
      

      Force option is supposed to ignore the error, add a comment in the dump file and move on to the next object.
      This doesnt happen for this particular function.
      But the behaviour can be observed for "Views with missing tables" errors.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            susmeet.khaire Susmeet Khaire
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.