MDEV-31092 mariadb-dump --force doesnt ignore error as it shouldnt